--- a/Geometrik Şekil Çizimleri/.project
+++ b/Geometrik Şekil Çizimleri/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java ile Geometrik Şekilleri Çizdirme</name>
+	<name>Geometrik Şekil Çizimleri</name>
 	<comment></comment>
 	<projects>
 	</projects>
